<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:fitsSystemWindows="true"
    tools:context="com.codepath.modele.twitter.activities.TweetDetailsActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:id="@+id/appBarOverlay">

        <android.support.v7.widget.Toolbar android:id="@+id/toolbar"
            android:layout_width="match_parent" android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary" app:popupTheme="@style/AppTheme.PopupOverlay"
            app:navigationIcon="@drawable/ic_twitter_logo_new"/>

    </android.support.design.widget.AppBarLayout>
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/appBarOverlay"
        >
        <RelativeLayout

            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:id="@+id/relativeLayout">

            <com.makeramen.roundedimageview.RoundedImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/ivUserPhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="60dp"
                android:minHeight="60dp"
                android:scaleType="fitCenter"
                app:riv_corner_radius="5dip"
                app:riv_mutate_background="true"

                app:riv_oval="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginRight="16dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:id="@+id/tvUserName"
                android:textColor="#DD000000"
                android:textSize="16sp"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/ivUserPhoto"
                android:layout_toLeftOf="@+id/tvCharsLeft"
                android:layout_toStartOf="@+id/tvCharsLeft" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_screen_name"
                android:id="@+id/tvUserScreenName"
                android:layout_below="@+id/tvUserName"
                android:layout_alignLeft="@+id/tvUserName"
                android:layout_alignStart="@+id/tvUserName" />
            <LinearLayout
                android:id="@+id/ln1"
                android:layout_below="@+id/tvUserScreenName"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/tweet_text"
                    android:id="@+id/tvTweetText"

                    android:textColor="#DD000000"
                    android:textSize="22sp"
                    android:autoLink="all"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />

              <ImageView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:id="@+id/ivPhoto"
                  />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/created_at_long"
                    android:id="@+id/tvCreatedAt"
                    android:layout_below="@+id/ivPhoto"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginBottom="12dp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@android:color/darker_gray"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/ln1">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:id="@+id/ivReply"
                    android:src="@drawable/reply_action_default"
                    android:layout_below="@+id/tvCreatedAt"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginRight="22dp"/>

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:id="@+id/ivRetweets"
                    android:src="@drawable/retweet_action_default"
                    android:layout_below="@+id/tvCreatedAt"
                    android:layout_toRightOf="@+id/ivReply"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reweet_count"
                    android:id="@+id/tvReweetCount"
                    android:layout_below="@+id/tvCreatedAt"
                    android:layout_toRightOf="@+id/ivRetweets"
                    android:layout_toEndOf="@+id/ivRetweets"
                    android:layout_marginRight="22dp"/>

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:id="@+id/ivFavorites"
                    android:src="@drawable/like_action_default"
                    android:layout_below="@+id/tvCreatedAt"
                    android:layout_toRightOf="@+id/tvReweetCount"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/favorites_count"
                    android:id="@+id/tvFavoritesCount"
                    android:layout_below="@+id/tvCreatedAt"
                    android:layout_toRightOf="@+id/ivFavorites"
                    android:layout_toEndOf="@+id/ivFavorites"/>


            </LinearLayout>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
